--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    --fallback-b1: #fff;
+}
+
 body {
     font-family: 'JetBrains Mono', monospace;
     font-optical-sizing: auto;
-    background-color: #fff;
 }
